# sphere-vis-rs

./: Cargo.toml  LICENSE
src/: main.rs  shader.rs  sphere.rs  util.rs
src/shaders/: vertex.glsl
