[package]
name = "sphere-vis"
version = "0.1.0"
authors = ["alexge50 <alexge50.x@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "^0.32.2"
nalgebra-glm = "^0.4.2"
gl = "^0.6.0"
portaudio = "^0.7.0"